added line breaks

--- a/courses_other.html
+++ b/courses_other.html
@@ -127,12 +127,12 @@ permalink: /courses/other-courses/
                                                     <tbody>
                                                         <tr>
                                                             <td>UK </td>
-                                                            <td>Mathematical review (calculus, probability, etc.).
-                                                                Population dynamics. Deterministic and stochastic
-                                                                models. Modelling structured populations:
-                                                                age-structured, spatial and network models. Applied
-                                                                programming with R. Statistical estimation of models.
-                                                                Computer-based simulations.</td>
+                                                            <td>Mathematical review (calculus, probability, etc.).<br>
+                                                                Population dynamics. <br> Deterministic and stochastic
+                                                                models. <br> Modelling structured populations:
+                                                                age-structured, spatial and network models. <br>(i) Applied
+                                                                programming with R.<br> (ii) Statistical estimation of models.
+                                                                <br>(iii) Computer-based simulations.</td>
                                                             <td>No</td>
                                                             <td>No</td>
                                                             <td>once a year or every two years</td>
@@ -216,10 +216,10 @@ permalink: /courses/other-courses/
                                                     <tbody>
                                                         <tr>
                                                             <td>UK </td>
-                                                            <td>Data retrieval and assembly. Alignment techniques.
+                                                            <td>Data retrieval and assembly.<br> Alignment techniques.<br>
                                                                 Phylogeny reconstruction (including maximum likelihood
-                                                                and Bayesian methods). Hypothesis testing. Population
-                                                                genetics approaches. Protein and nucleotide sequence
+                                                                and Bayesian methods). <br>Hypothesis testing. Population
+                                                                genetics approaches. <br>Protein and nucleotide sequence
                                                                 analysis, including NGS data (Please note however that
                                                                 the course focuses on NGS analyses for molecular
                                                                 evolution, we do not cover traditional NGS analyses
@@ -312,15 +312,15 @@ permalink: /courses/other-courses/
                                                             <td>UK </td>
                                                             <td>Data reduction and data integration methods – including
                                                                 comparison of major approaches through lectures and
-                                                                practical exercises. Machine and deep learning –
+                                                                practical exercises. <br> Machine and deep learning –
                                                                 practical exercises on supervised machine learning,
                                                                 including classification and regression, and deep
-                                                                learning. Functional inference from omics data –
+                                                                learning. <br>Functional inference from omics data –
                                                                 approaches to extract signatures of cell state from
                                                                 -omics data including transcription factor activation
-                                                                and kinase activity states. Extraction of upstream
+                                                                and kinase activity states. <br> Extraction of upstream
                                                                 signalling pathways from transcriptomics datasets.
-                                                                Network inference and signal propagation – network
+                                                                <br>Network inference and signal propagation – network
                                                                 inference approaches from -omics data.
                                                             </td>
                                                             <td>No</td>
@@ -405,19 +405,19 @@ permalink: /courses/other-courses/
                                                             <td>UK </td>
                                                             <td>Visualisation of sequence features and next generation
                                                                 sequencing data using the Artemis genome browser and
-                                                                annotation tool. Genome browsing and comparative
-                                                                genomics (ACT and JBrowse/GBrowse). Formulating complex
+                                                                annotation tool.<br> Genome browsing and comparative
+                                                                genomics (ACT and JBrowse/GBrowse). <br> Formulating complex
                                                                 biological queries in computationally accessible form.
-                                                                Web-based resources including the GeneDB.org and
-                                                                VEuPathDB.org family of databases. Integrating
+                                                                <br>Web-based resources including the GeneDB.org and
+                                                                VEuPathDB.org family of databases. <br>Integrating
                                                                 functional genomics data (RNA-seq, ChIP-seq, ChIP-chip,
                                                                 microarrays, proteomics, etc) with genome sequence data.
-                                                                Theoretical aspects of genome re-sequencing. Querying
-                                                                genetic diversity on a genome-wide scale. Metabolic
-                                                                pathways and pathway and GO enrichment analysis. Working
+                                                                <br>Theoretical aspects of genome re-sequencing. Querying
+                                                                genetic diversity on a genome-wide scale. <br> Metabolic
+                                                                pathways and pathway and GO enrichment analysis. <br> Working
                                                                 with next-generation sequence data (mapping, variant
-                                                                calling, RNA-Seq etc) using both command-line and
-                                                                web-based (Galaxy) methods. Introduction to community
+                                                                calling,<br> RNA-Seq etc) using both command-line and
+                                                                web-based (Galaxy) methods. <br>Introduction to community
                                                                 curation tools
                                                             </td>
                                                             <td>No</td>
@@ -497,13 +497,13 @@ permalink: /courses/other-courses/
                                                         <tr>
                                                             <td>UK </td>
                                                             <td>Overview of single molecule long read sequencing
-                                                                technologies. Full length total RNA sequencing. Full
-                                                                length cDNA sequencing. Small RNA sequencing. Single
+                                                                technologies.<br> Full length total RNA sequencing.<br> Full
+                                                                length cDNA sequencing. <br>Small RNA sequencing.<br> Single
                                                                 cell transcriptome data generation and analysis.
-                                                                Identification of post-transcriptional modifications in
-                                                                RNA (epi-transcriptomics). Functional assays for lncRNA
-                                                                biology. Integration of microRNA and mRNA data;
-                                                                functional analysis of microRNAs. Expression network and
+                                                                <br>Identification of post-transcriptional modifications in
+                                                                RNA (epi-transcriptomics).<br> Functional assays for lncRNA
+                                                                biology. <br>Integration of microRNA and mRNA data;
+                                                                functional analysis of microRNAs. <br> Expression network and
                                                                 pathway integration and analysis
                                                             </td>
                                                             <td>No</td>
