updated bio infor profiles

--- a/profiles0004.html
+++ b/profiles0004.html
@@ -89,7 +89,7 @@ permalink: /courses/bioinformatics-profiles4/
         <tr data-toggle="collapse" id="table1" data-target=".table1">
           <td>Foundational/Generic Skills</td>
           <td></td>
-          <td class="text-center"><img alt="..." width="10%" src="{{ site.baseurl }}img/brickwall_1.png" /></td> 
+          <td class="text-center"><img alt="..." width="10%" src="/ngs-academy/img/brickwall_1.png" /></td> 
           <td><button class="btn btn-default btn-sm"> View More &darr;</button></td>
           <!--  
           <td></td>
@@ -172,7 +172,7 @@ permalink: /courses/bioinformatics-profiles4/
         <tr data-toggle="collapse" id="table2" data-target=".table2">
           <td>Applied Skills: Viral Pathogens</td>
           <td></td> 
-        <td class="text-center"> <img alt="..." width="10%" src="{{ site.baseurl }}img/virus_1.png" /></td> 
+        <td class="text-center"> <img alt="..." width="10%" src="/ngs-academy/img/virus_1.png" /></td> 
           <td><button class="btn btn-default btn-sm"> View More 	&darr;</button></td>
           <!--  
           <td></td>
@@ -250,7 +250,7 @@ permalink: /courses/bioinformatics-profiles4/
         <tr data-toggle="collapse" id="table3" data-target=".table3">
           <td>Applied Skills: Bacterial Pathogens</td>
           <td></td> 
-          <td class="text-center"><img alt="..." width="10%" src="{{ site.baseurl }}img/bacteria_1.png" /></td>  
+          <td class="text-center"><img alt="..." width="10%" src="/ngs-academy/img/bacteria_1.png" /></td>  
           <td><button class="btn btn-default btn-sm"> View More &darr;</button></td>
           <!-- 
           <td></td>
@@ -346,7 +346,7 @@ permalink: /courses/bioinformatics-profiles4/
         <tr data-toggle="collapse" id="table01" data-target=".table01">
           <td>Foundational/Generic Skills</td>
           <td></td>
-          <td class="text-center"><img alt="..." width="10%" src="{{ site.baseurl }}img/brickwall_1.png" /></td> 
+          <td class="text-center"><img alt="..." width="10%" src="/ngs-academy/img/brickwall_1.png" /></td> 
           <td><button class="btn btn-default btn-sm"> View More &darr;</button></td>
           <!--  
           <td></td>
@@ -387,7 +387,7 @@ permalink: /courses/bioinformatics-profiles4/
         <tr data-toggle="collapse" id="table02" data-target=".table02">
           <td>Applied Skills: Viral Pathogens</td>
           <td></td> 
-        <td class="text-center"> <img alt="..." width="10%" src="{{ site.baseurl }}img/virus_1.png" /></td> 
+        <td class="text-center"> <img alt="..." width="10%" src="/ngs-academy/img/virus_1.png" /></td> 
           <td><button class="btn btn-default btn-sm"> View More 	&darr;</button></td>
           <!--  
           <td></td>
@@ -440,7 +440,7 @@ permalink: /courses/bioinformatics-profiles4/
         <tr data-toggle="collapse" id="table03" data-target=".table03">
           <td>Applied Skills: Bacterial Pathogens</td>
           <td></td> 
-          <td class="text-center"><img alt="..." width="10%" src="{{ site.baseurl }}img/bacteria_1.png" /></td>  
+          <td class="text-center"><img alt="..." width="10%" src="/ngs-academy/img/bacteria_1.png" /></td>  
           <td><button class="btn btn-default btn-sm"> View More &darr;</button></td>
           <!-- 
           <td></td>
@@ -513,7 +513,7 @@ permalink: /courses/bioinformatics-profiles4/
         <tr data-toggle="collapse" id="table010" data-target=".table010">
           <td>Foundational/Generic Skills</td>
           <td></td>
-          <td class="text-center"><img alt="..." width="10%" src="{{ site.baseurl }}img/brickwall_1.png" /></td> 
+          <td class="text-center"><img alt="..." width="10%" src="/ngs-academy/img/brickwall_1.png" /></td> 
           <td><button class="btn btn-default btn-sm"> View More &darr;</button></td>
           <!--  
           <td></td>
@@ -572,7 +572,7 @@ permalink: /courses/bioinformatics-profiles4/
         <tr data-toggle="collapse" id="table020" data-target=".table020">
           <td>Applied Skills: Viral Pathogens</td>
           <td></td> 
-        <td class="text-center"> <img alt="..." width="10%" src="{{ site.baseurl }}img/virus_1.png" /></td> 
+        <td class="text-center"> <img alt="..." width="10%" src="/ngs-academy/img/virus_1.png" /></td> 
           <td><button class="btn btn-default btn-sm"> View More 	&darr;</button></td>
           <!--  
           <td></td>
@@ -619,7 +619,7 @@ permalink: /courses/bioinformatics-profiles4/
         <tr data-toggle="collapse" id="table030" data-target=".table030">
           <td>Applied Skills: Bacterial Pathogens</td>
           <td></td> 
-          <td class="text-center"><img alt="..." width="10%" src="{{ site.baseurl }}img/bacteria_1.png" /></td>  
+          <td class="text-center"><img alt="..." width="10%" src="/ngs-academy/img/bacteria_1.png" /></td>  
           <td><button class="btn btn-default btn-sm"> View More &darr;</button></td>
           <!-- 
           <td></td>
