updated markdown files

--- a/profiles0004.html
+++ b/profiles0004.html
@@ -74,7 +74,7 @@ permalink: /courses/bioinformatics-profiles4/
         }
 
         .accordion-body {
-            padding: 10px;
+            padding: 1px;
             display: none;
         }
 
@@ -94,7 +94,7 @@ permalink: /courses/bioinformatics-profiles4/
   <div class="horizontal-accordion">
       <div class="accordion-item">
           <div class="accordion-header" data-toggle="collapse" data-target="#item1">
-            <b> Pathon Surveillance Training Curricula</b>
+            <b class="text-center"> Pathon Surveillance Training Curricula</b>
           </div>
           <div id="item1" class="accordion-body collapse">
               <!-- Pathogen Surveillance Training Curricula -->
